Cleaned up in the theme and made a fe_setup

--- a/templates/theme/sass/base/_base.scss
+++ b/templates/theme/sass/base/_base.scss
@@ -1,14 +1,31 @@
-
 // -----------------------------------------
-  // Helpers
-// -----------------------------------------
-
-@import "normalize";
-@import "variables";
-@import "mixins";
-
-// -----------------------------------------
-  // Base
+  // Headers
 // -----------------------------------------
 
-@import "base";
+h1, h2, h3, h4, h5, h6 {}
+
+h1 {}
+
+h2 {}
+
+h3 {}
+
+h4 {}
+
+h5 {}
+
+h6 {}
+
+// -----------------------------------------
+  // Lists
+// -----------------------------------------
+
+ul, ol {}
+
+ul {}
+
+ol {}
+
+a {}
+
+p {}
