--- a/templates/theme/sass/application.scss
+++ b/templates/theme/sass/application.scss
@@ -6,6 +6,8 @@
 @import "base/utilities";     // Toolbelt, mixins
 @import "base/doc-elements";  // HTML elements.
 
-body.cke_show_borders {
-  padding: 20px;
-}
+@import "layout/header";
+@import "layout/footer";
+
+@import "modules/forms";
+
