--- a/templates/theme/sass/screen.scss
+++ b/templates/theme/sass/screen.scss
@@ -6,7 +6,7 @@
 @import "base/utilities";     // Toolbelt, mixins
 @import "base/doc-elements";  // HTML elements.
 
-@import "layout/header";
-@import "layout/footer";
+@import "layout/header";      // Header layout
+@import "layout/footer";      // Footer layout
 
-@import "modules/forms";
+@import "modules/forms";      // Forms
