--- a/templates/theme/sass/base/_utilities.scss
+++ b/templates/theme/sass/base/_utilities.scss
@@ -1,11 +1,11 @@
 img {
-  // Images not align properly
-  vertical-align: bottom;
-  // Poor IE image rendering
-  -ms-interpolation-mode: bicubic;
+  vertical-align: bottom; // Images not align properly
+  -ms-interpolation-mode: bicubic; // Poor IE image rendering
 }
 
 // Fluid elements
+// ------------------------
+
 img, embed, object, video {
   max-width: 100%;
   max-height: 100%;
