Added comments and removed siles

--- a/templates/theme/sass/editor.scss
+++ b/templates/theme/sass/editor.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+// Base
+// ------------------------
 @import "base/normalize";     // Normalization across browsers
 @import "base/variables";     // Configurations
 @import "base/typography";    // Typography
