Updated Normalize path

--- a/templates/theme/sass/screen.scss
+++ b/templates/theme/sass/screen.scss
@@ -2,7 +2,7 @@
 
 // Base
 // ------------------------
-@import "base/normalize"; // Normalization across browsers
+@import "css/normalize"; // Normalization across browsers
 @import "bourbon"; // Include bourbon
 @import "base/grid-settings"; // Grid settings for neat
 @import "neat"; // Include neat
