Updated import path to neat-helpers

--- a/templates/theme/sass/base/_grid-settings.scss
+++ b/templates/theme/sass/base/_grid-settings.scss
@@ -1,4 +1,4 @@
-@import "neat/neat-helpers";
+@import "neat-helpers";
 
 // Example of a grid-settings file for use with neat
 // Load this file before you load neat, but after you load bourbon.
