--- a/templates/theme/sass/base/_variables.scss
+++ b/templates/theme/sass/base/_variables.scss
@@ -1,5 +1,6 @@
-// Variables
-// ------------------------
+/**
+ * Variables
+ */
 $base-background-color:         white;
 $base-font-color:               #333;
 
