--- a/templates/theme/sass/base/_doc-elements.scss
+++ b/templates/theme/sass/base/_doc-elements.scss
@@ -1,5 +1,6 @@
-// Document body
-// ------------------------
+/**
+ * Document body
+ */
 body {
   background-color: $base-background-color;
   color: $base-font-color;
@@ -8,8 +9,9 @@ body {
   line-height: $base-line-height;
 }
 
-// Headings
-// ------------------------
+/**
+ * Headings
+ */
 h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
   line-height: $base-heading-line-height;
@@ -39,8 +41,9 @@ h6 {
   font-size: $base-heading-h6;
 }
 
-// Anchor
-// ------------------------
+/**
+ * Anchor
+ */
 a {
   &:hover {}
   &:active, &:focus {}
