--- a/templates/theme/sass/base/_utilities.scss
+++ b/templates/theme/sass/base/_utilities.scss
@@ -1,10 +1,11 @@
 img {
-  vertical-align: bottom; // Images not align properly
-  -ms-interpolation-mode: bicubic; // Poor IE image rendering
+  vertical-align: bottom; /* Images not align properly */
+  -ms-interpolation-mode: bicubic; /* Poor IE image rendering */
 }
 
-// Fluid elements
-// ------------------------
+/**
+ * Fluid elements
+ */
 img, embed, object, video {
   max-width: 100%;
   max-height: 100%;
