TOOLS-178 Lint: Sass: selector-list-comma-newline-after
Add newlines after commas in multiple selector declaration blocks.

--- a/templates/theme/sass/base/_doc-elements.scss
+++ b/templates/theme/sass/base/_doc-elements.scss
@@ -12,7 +12,12 @@ body {
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   text-rendering: optimizeLegibility;
   line-height: $base-heading-line-height;
 }
@@ -46,5 +51,7 @@ h6 {
  */
 a {
   &:hover {}
-  &:active, &:focus {}
+
+  &:active,
+  &:focus {}
 }
