--- a/templates/theme/sass/base/_utilities.scss
+++ b/templates/theme/sass/base/_utilities.scss
@@ -6,7 +6,10 @@ img {
 /**
  * Fluid elements
  */
-img, embed, object, video {
+img,
+embed,
+object,
+video {
   max-width: 100%;
   max-height: 100%;
   width: auto;
