TOOLS-178 Lint: Sass: block-no-empty
Include comments in empty block declarations.

--- a/templates/theme/sass/base/_doc-elements.scss
+++ b/templates/theme/sass/base/_doc-elements.scss
@@ -50,8 +50,12 @@ h6 {
  * Anchor
  */
 a {
-  &:hover {}
+  &:hover {
+    /* Anchor hover effects. */
+  }
 
   &:active,
-  &:focus {}
+  &:focus {
+    /* Anchor focus effects. */
+  }
 }
