TOOLS-178 Lint: Sass: color-no-named
Do not use named color values. Use hex (or variables) instead.

--- a/templates/theme/sass/base/_variables.scss
+++ b/templates/theme/sass/base/_variables.scss
@@ -1,7 +1,9 @@
 /**
  * Variables
  */
-$base-background-color: white;
+$white: #fff;
+
+$base-background-color: $white;
 $base-font-color: #333;
 
 $base-font-family: "Helvetica", Arial, sans-serif;
